--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,7 +32,8 @@
 .background-layer {
   position: absolute;
   top: 0;
-  width: 100vw;
+  left: 0;
+  width: 200%;
   height: 13.6rem;
   background-color: rgb(55, 63, 80);
   z-index: -1;
