--- a/client/src/components/Navigation/MainNavigation.css
+++ b/client/src/components/Navigation/MainNavigation.css
@@ -4,14 +4,15 @@
   height: 100%;
   align-items: center;
   max-width: 1260px;
-  min-width: 300px;
   margin: auto;
+}
+
+.main-navigation > * {
+  margin: 0 1rem;
 }
 
 .main-navigation__title {
   font-weight: 500;
-  /* padding: 0 0.6rem; */
-  margin: 0 3rem;
 }
 
 .main-navigation__title:hover {
@@ -20,7 +21,6 @@
 .main-navigation__menu-btn {
   height: 2.3rem;
   background: transparent;
-  overflow: hidden;
   border: none;
   display: flex;
   flex-direction: column;
@@ -62,7 +62,15 @@
     display: block;
   }
 
+  .main-navigation__cart {
+    display: none;
+  }
+
   .main-navigation {
     justify-content: space-between;
+  }
+
+  .main-navigation__title {
+    margin-left: 3rem;
   }
 }
