--- a/client/src/components/Sort.css
+++ b/client/src/components/Sort.css
@@ -1,8 +1,8 @@
 .sort {
   display: flex;
   align-items: center;
-  margin-bottom: 1rem;
-  margin-right: 14.4rem;
+  /* margin-bottom: 1rem;
+  margin-right: 14.4rem; */
 }
 
 .sort-label {
