--- a/client/src/components/UIElements/BackElement.css
+++ b/client/src/components/UIElements/BackElement.css
@@ -1,14 +1,18 @@
 .back-element {
   white-space: nowrap;
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   top: 8.6rem;
-  left: calc(50% - 8rem);
+  left: 0;
   font-size: 1.5rem;
   color: #ddd;
 }
 
 @media (max-width: 540px) {
-  .back-element {
-    left: 3.1rem;
-  }
+  /* .back-element {
+    left: 4rem;
+  } */
 }
