--- a/client/src/pages/Products.css
+++ b/client/src/pages/Products.css
@@ -11,7 +11,16 @@
 .content-header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
+}
+
+.showing-title {
+  color: white;
+  font-size: 1.3rem;
+  font-weight: 450;
+  white-space: nowrap;
+  flex-basis: 55%;
+  margin-left: 3rem;
 }
 
 .expanded-item-enter {
@@ -43,17 +52,13 @@
   transition: all 500ms;
 }
 
-@media (max-width: 500px) {
-  .content-header {
+@media (max-width: 540px) {
+  .showing-title {
+    display: none;
   }
 }
 
-@media (max-width: 768px) {
-  /* .content-header {
-    flex-direction: column;
-    align-items: flex-start;
-  } */
-
+@media (max-width: 950px) {
   .expanded-layout {
     flex-direction: column;
     align-items: center;
@@ -65,11 +70,11 @@
   }
 }
 
-@media (min-width: 769px) {
+/* @media (min-width: 769px) {
   .responsive-shrink {
     max-width: 266px;
   }
-}
+} */
 
 @media (min-width: 951px) {
   .responsive-shrink {
