--- a/client/src/components/FormElements/ImageUpload.css
+++ b/client/src/components/FormElements/ImageUpload.css
@@ -6,7 +6,7 @@
 }
 
 .image-upload__preview {
-  width: 18rem;
+  max-width: 288px;
   margin-bottom: 1rem;
 }
 
@@ -14,4 +14,10 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.image-error {
+  margin-top: 0.6rem;
+  font-size: 0.8rem;
+  color: red;
 }
