image placeholder, misc fixes, product page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,7 @@
   --black-color: #373f50;
   --icon-color: #ddd;
   --purple-color: rgb(55, 63, 80);
+  --light-purple-color: #8d91ee;
 }
 
 .main-content {
