--- a/client/src/components/UIElements/NotificationsList.css
+++ b/client/src/components/UIElements/NotificationsList.css
@@ -1,8 +1,14 @@
 .notifications-list {
   position: fixed !important;
-  bottom: 1rem;
-  left: calc(90% - 22rem);
+  top: 6%;
+  left: calc(100% - 22rem);
   display: flex;
   flex-direction: column;
   list-style: none;
+}
+
+@media (max-width: 768px) {
+  .notifications-list {
+    top: 10.5%;
+  }
 }
