--- a/client/src/pages/ProductPage.css
+++ b/client/src/pages/ProductPage.css
@@ -3,28 +3,29 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-between;
+  gap: 1rem;
 }
 
 .product-page__content {
-  padding: 1rem;
-
-  width: 45%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.product-page__content div {
-  margin-bottom: 16px;
+  gap: 1rem;
 }
 
 .product-page__image {
   display: flex;
-  width: 45%;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-width: 284px;
+}
+
+.product-page__content--info {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .product-page__content--price {
@@ -39,9 +40,9 @@
 }
 
 .product-page__content--cart {
-  align-self: flex-start;
   display: flex;
   justify-content: flex-start;
+  gap: 1rem;
 }
 
 .product-page__content--cart select {
@@ -50,7 +51,6 @@
   appearance: none;
   width: 70px;
   height: 37px;
-  margin-right: 1rem;
   padding-left: 16px;
   background-image: url("../icons/expand.svg");
   background-repeat: no-repeat;
@@ -59,4 +59,20 @@
 
 .product-page__content--cart select:focus {
   border-color: #333;
+}
+
+@media (max-width: 768px) {
+  .product-page {
+    flex-direction: column;
+    max-width: 511.66px;
+  }
+}
+
+.product-page__title {
+  color: white;
+  font-size: 2rem;
+  font-weight: 450;
+  white-space: nowrap;
+  margin-left: 3rem;
+  margin-bottom: 1rem;
 }
