--- a/client/src/components/UIElements/NotificationItem.css
+++ b/client/src/components/UIElements/NotificationItem.css
@@ -39,10 +39,12 @@
 }
 
 .notification-exit {
+  opacity: 1;
 }
 
 .notification-exit-active {
   transition: all 500ms;
+  opacity: 0;
 }
 
 .add-to-cart {
