--- a/client/src/components/Navigation/MainNavigation.css
+++ b/client/src/components/Navigation/MainNavigation.css
@@ -46,8 +46,8 @@
   display: none;
 }
 
-.main-navigation__drawer-nav {
-}
+/* .main-navigation__drawer-nav {
+} */
 
 @media (min-width: 768px) {
   .main-navigation__menu-btn {
