--- a/client/src/components/CartItem.css
+++ b/client/src/components/CartItem.css
@@ -91,4 +91,13 @@
   margin-left: 4px;
 }
 
-@media (max-width: 768px) :;
+@media (max-width: 360px) {
+  .cart-item__container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #e3e9ef;
+    gap: 1rem;
+  }
+}
