--- a/client/src/components/StripeContainer.css
+++ b/client/src/components/StripeContainer.css
@@ -35,8 +35,13 @@ body {
 } */
 
 .result-message {
-  line-height: 22px;
   font-size: 16px;
+  color: rgb(89, 111, 214);
+  font-size: 16px;
+  line-height: 20px;
+  margin-top: 16px;
+  text-align: center;
+  font-weight: 450;
 }
 .result-message a {
   color: rgb(89, 111, 214);
@@ -50,7 +55,7 @@ body {
   color: rgb(105, 115, 134);
   font-size: 16px;
   line-height: 20px;
-  margin-top: 12px;
+  margin-top: 16px;
   text-align: center;
 }
 #card-element {
