--- a/client/src/components/UIElements/Card.css
+++ b/client/src/components/UIElements/Card.css
@@ -26,12 +26,15 @@
 }
 
 .animated {
-  box-shadow: 0 0 0 rgba(0, 0, 0, 0);
-  transition: box-shadow 250ms ease-in-out;
+  /* box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+  transition: box-shadow 250ms ease-in-out; */
+  transition: all 250ms;
 }
 
 .animated:hover {
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26); */
+  transform: translateX(6px) translateY(-6px);
+  /* scaleX(105%) scaleY(105%) */
 }
 
 .book-item__content {
@@ -85,6 +88,11 @@
     width: 100%;
     max-width: 30rem;
   }
+
+  .animated:hover {
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    transform: none;
+  }
 }
 
 @media (max-width: 540px) {
@@ -92,9 +100,31 @@
     flex-direction: row;
     align-items: flex-end;
     gap: 1rem;
+    box-shadow: none;
   }
   .expanded-item {
     max-width: 27rem;
     box-shadow: none;
+  }
+}
+
+@media (max-width: 410px) {
+  .book-item__content {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    /* gap: 1rem; */
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  }
+  /* .expanded-item {
+    max-width: 27rem;
+    box-shadow: none;
+  } */
+}
+
+@media (max-width: 360px) {
+  .shop-cart__order {
+    width: 100%;
+    min-width: 16rem;
   }
 }
