--- a/client/src/components/UIElements/Modal.css
+++ b/client/src/components/UIElements/Modal.css
@@ -2,8 +2,8 @@
   z-index: 100;
   position: fixed;
   top: 25vh;
-  left: 10%;
-  width: 80%;
+  left: calc(50% - 20rem);
+  width: 40rem;
   background: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   overflow: hidden;
@@ -54,9 +54,9 @@
   transition: all 200ms;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .modal {
-    left: calc(50% - 20rem);
-    width: 40rem;
+    left: 10vw;
+    width: 80vw;
   }
 }
