--- a/client/src/components/BookItem.css
+++ b/client/src/components/BookItem.css
@@ -74,6 +74,7 @@
     flex-direction: column;
     justify-content: flex-start;
     height: fit-content;
+    width: 100%;
   }
   .book-item__p > *:last-child {
     margin-top: 0;
