--- a/client/src/components/CartItem.css
+++ b/client/src/components/CartItem.css
@@ -7,17 +7,18 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding-bottom: 1rem;
   border-bottom: 1px solid #e3e9ef;
+  gap: 1rem;
 }
 
-.cart-item__content {
+/* .cart-item__content {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 1rem;
-}
+} */
 
 .cart-item__info {
   display: flex;
@@ -91,6 +92,12 @@
   margin-left: 4px;
 }
 
+.cart-item__div {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
 @media (max-width: 360px) {
   .cart-item__container {
     display: flex;
@@ -99,5 +106,12 @@
     padding-bottom: 1rem;
     border-bottom: 1px solid #e3e9ef;
     gap: 1rem;
+    max-width: 200px;
+  }
+
+  .cart-item__div {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
   }
 }
