--- a/client/src/components/UIElements/Card.css
+++ b/client/src/components/UIElements/Card.css
@@ -28,7 +28,7 @@
 .animated {
   /* box-shadow: 0 0 0 rgba(0, 0, 0, 0);
   transition: box-shadow 250ms ease-in-out; */
-  transition: all 250ms;
+  transition: transform 250ms;
 }
 
 .animated:hover {
@@ -113,7 +113,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    /* gap: 1rem; */
+    gap: 0;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   }
   /* .expanded-item {
